# tradu-git

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/l10n/: app_en.arb  app_es.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_es.dart
lib/src/: workspace_provider.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/ui/: app_theme.dart
lib/ui/screens/: dashboard_screen.dart  onboarding_screen.dart  saf_setup_screen.dart  settings_screen.dart  workspace_screen.dart
lib/ui/widgets/: sora_editor_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: branch.rs  commit.rs  mod.rs  repo.rs  simple.rs  ssl.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_tradu_git.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_tradu_git.podspec
rust_builder/windows/: CMakeLists.txt
test/: models_test.dart  path_helpers_test.dart  providers_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
