[package]
name = "rust_lib_tradu_git"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
git2 = { version = "0.19.0", features = ["vendored-libgit2", "vendored-openssl"] }
libgit2-sys = "0.17.0"
errno = "0.3"
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
